Fix overflow on mobile

--- a/2021-dev/assets/styles/_base.scss
+++ b/2021-dev/assets/styles/_base.scss
@@ -1,5 +1,7 @@
-body {
+html, body {
   overflow-x: hidden;
+}
+body {
   * {
     font-size: 16px;
     font-weight: normal;
